<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_alarm"
        android:title="@string/nav_alarm" />
    <item
        android:id="@+id/nav_tasks"
        android:title="@string/nav_tasks" />
    <item
        android:id="@+id/nav_timetable"
        android:title="@string/nav_timetable" />
    <item
        android:id="@+id/nav_attendance"
        android:title="@string/nav_attendance" />
    <group android:id="@+id/nav_group_bottom">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_credits"
            android:title="@string/nav_credits" />
        <item
            android:id="@+id/nav_tutorial"
            android:title="@string/nav_tutorial" />
    </group>
</menu>
